--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ button {
     left: 480px;
     width: 285px;
     height: 260px;
-    background-color: yellow;
+    background-color: green;
     border: 1px solid #333;
     border-radius: 1px;
     padding: 5px;
